[package]
name = "allelua"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Lua distribution blessed by the gods of programming."
documentation = "https://docs.rs/allelua"
repository = "https://github.com/negrel/allelua"
readme = "README.md"
authors = ["Alexandre Negrel <alexandre@negrel.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "allelua"
path = "src/bin/allelua/main.rs"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# console-subscriber = { version = "0.4.0" }
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "3714da5ec8a1029aac077756c6531918e0b64915", features = ["luajit52", "async", "macros"] }
nanorand = "0.7.0"
stylua = { version = "0.20.0", features = ["lua52"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["time", "rt", "macros", "sync", "fs", "io-util"] }
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
