[package]
name = "allelua"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Lua distribution blessed by the gods of programming."
documentation = "https://docs.rs/allelua"
repository = "https://github.com/negrel/allelua"
readme = "README.md"
authors = ["Alexandre Negrel <alexandre@negrel.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "allelua"
path = "src/bin/allelua/main.rs"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
full_moon = { version = "1.1.2", default-features = false, features = ["lua52"] }
# console-subscriber = { version = "0.4.0" }
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "8d8d521721eaaf8a15792ef517889dd69bb6889e", features = ["luajit52", "async", "macros", "error-send", "serialize"] }
nanorand = "0.7.0"
os_pipe = "1.2.1"
regex = "1.11.0"
selene-lib = { git = "https://github.com/Kampfkarren/selene", rev = "e19e3c4e6a9eb9a02f8991d346e078fe254c6d82", default-features = false }
serde = "1.0.210"
serde_json = { version = "1.0.128", features = [] }
similar = "2.6.0"
stylua = { version = "2.0.1", features = ["lua52"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["time", "rt", "macros", "sync", "fs", "io-util", "io-std", "process"] }
tokio-util = "0.7.12"
tower-lsp = "0.20.0"
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
